syntax = "proto3";
package this;
option go_package = "*./proto";

service UserService {
  rpc GetUserById(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message CreateUserRequest{
  CreateUserData data = 1;
}

message CreateUserData{
  string name = 1;
  string email = 2;
  string phone = 3;
  string login = 4;
  string password = 5;
}

message CreateUserResponse{
  int64 id = 1;
  int64 code = 2;
}

message GetUserRequest{
  GetUserData data = 1;
}

message GetUserData{
  int64 id = 1;
}

message GetUserResponse{
  string name = 1;
  string email = 2;
  string phone = 3;
  string login = 4;
  int64 code = 5;
}

message UpdateUserRequest{
    UpdateUserData data = 1;
}

message UpdateUserData{
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
}

message UpdateUserResponse{
  int64 code = 1;
}